--- a/src/styles/LatestNews.css
+++ b/src/styles/LatestNews.css
@@ -3,7 +3,6 @@
 
 .latest-news {
   padding: 20px 200px;
-  font-family: Arial, sans-serif;
 }
 
 .latest-news-header {
@@ -127,4 +126,53 @@
   height: 100%;
   background-color: #333333;
   border-radius: 3px;
+}
+
+@media (max-width: 768px) {
+  .latest-news {
+    padding: 10px 50px;
+  }
+  .latest-articles-header {
+    font-size: 32px;
+  }
+  
+  .articles {
+    display: block;
+    align-items: center;
+  }
+
+  .article {
+    width: 100%;
+  }
+
+  .newsletter {
+    display: block;
+    margin-top: 40px;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .newsletter-body {
+    font-size: 14px;
+  }
+
+  .newsletter-subscribe input {
+    padding: 10px;
+    font-size: 14px;
+    width: 90%;
+    margin-right:0px;
+  }
+
+  .newsletter-subscribe button {
+    margin-top: 10px;
+    padding: 8px 16px;
+    font-size: 14px;
+    border: none;
+    width: 98%;
+  }
+
+  .newsletter-header {
+    font-size: 30px;
+  }
+  
 }
